Update Readme file

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,29 @@
-== README
+==  Warehouse demo
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Technical challenge for Michael Litton ApoEx.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+== TODO
+
+1. Create a Ruby on Rails application that exposes an API for creating a products and boxes as well as a simple GUI for adding them
+
+2. An product has
+
+  - product number
+  - name
+  - width
+  - height
+  - depth
+  - weight
+  - stock level
+
+3. A box as a
+
+  - name
+  - volume
+
+4. A view where you can select a a number of boxes of a specific type and a list of products with stock levels shown with a button "Pack!"
+
+5. Clicking on the button "Pack!" should show a view with how many boxes you need and what products go in switch box.
+
+Write Rspec tests for the two models, controllers and associated views.
